# cardano-sl

./: default.nix  nixpkgs-src.json  stack.yaml
auxx/: Main.hs  cardano-sl-auxx.cabal
auxx/src/: Mode.hs  Plugin.hs
binary/: cardano-sl-binary.cabal
block/: cardano-sl-block.cabal
block/test/: cardano-sl-block-test.cabal
chain/test/: test.hs
client/: cardano-sl-client.cabal
core/: cardano-sl-core.cabal
core/test/: cardano-sl-core-test.cabal
crypto/: cardano-sl-crypto.cabal
db/: cardano-sl-db.cabal
db/bench/: Bench.hs  naive.index
db/main/: db-explore.hs
db/test/: cardano-sl-db-test.cabal
delegation/: cardano-sl-delegation.cabal
delegation/test/: cardano-sl-delegation-test.cabal
docs/git/: cheat-sheet.md
explorer/: cardano-sl-explorer.cabal
explorer/frontend/: default.nix
faucet/server/: Main.hs
generator/: cardano-sl-generator.cabal
generator/app/: VerificationBench.hs
generator/test/: Test.hs
infra/: cardano-sl-infra.cabal
lib/: cardano-sl.cabal  configuration.yaml  followTheSatoshi.html  mainnet-genesis-dryrun-with-stakeholders.json  mainnet-genesis.json  mainnet-staging-short-epoch-genesis.json  testnet-genesis.json  txSigning.html
lrc/: cardano-sl-lrc.cabal
networking/: cardano-sl-networking.cabal
node/: Main.hs  cardano-sl-node.cabal
pkgs/: default.nix
scripts/: package-dep-graph.sh
ssc/: cardano-sl-ssc.cabal
tools/: cardano-sl-tools.cabal
txp/: cardano-sl-txp.cabal
txp/test/: cardano-sl-txp-test.cabal
txp/test/Test/Pos/Txp/: Arbitrary.hs
txp/test/Test/Pos/Txp/Toil/: UtxoSpec.hs
update/: cardano-sl-update.cabal
util/: cardano-sl-util.cabal
wallet/: cardano-sl-wallet.cabal
wallet-new/: cardano-sl-wallet-new.cabal
(+348 files in other folders)
