name:                cardano-sl-txp-test
version:             1.3.0
synopsis:            Cardano SL - arbitrary instances for cardano-sl-txp
description:         Cardano SL - arbitrary instances for cardano-sl-txp
license:             MIT
license-file:        LICENSE
homepage:            https://github.com/input-output-hk/cardano-sl
author:              IOHK
maintainer:          support@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:

  build-depends:

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2
